agilezen.com (archived on 2010-09-17)
{
  "alexa_rank": 169477,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 7440,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.87,
  "homepage_snapshot_redirected_domain": "agilezen.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100917030853id_/http://agilezen.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100917030853id_/http%3A//agilezen.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "agilezen.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100917031417id_/http%3A//agilezen.com/policies/privacy",
  "policy_title": "AgileZen \u2013 Privacy Policy",
  "policy_url": "agilezen.com/policies/privacy",
  "sha1": "5878dee0c86ee8a445d5703218a959d43be32087",
  "simhash": 12432141855876700502,
  "simhash_updated": true,
  "site_hostname": "agilezen.com",
  "site_url": "http://agilezen.com",
  "smog": 14.74,
  "strict_updated": true,
  "timestamp": "20100917031417",
  "word_count": 1186,
  "year": 2010
}

--- a/a/ag/agi/agilezen.com.html
+++ b/a/ag/agi/agilezen.com.html
@@ -1,42 +1,92 @@
-<!--The following is the downloaded HTML source of the agilezen.com privacy policy that was archived on 2010-04-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100402104231id_/http%3A//agilezen.com/policies/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the agilezen.com privacy policy that was archived on 2010-09-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100917031417id_/http%3A//agilezen.com/policies/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html><head><title>Zen – Privacy Policy</title><link rel="stylesheet" type="text/css" href="/content/css/bundle/external.css?t=20100131083954"><link rel="shortcut icon" href="/content/images/favicon.ico" type="image/x-icon"><meta name="description" content="A simple, flexible, and cost-effective web-based project management application built on ideas from lean manufacturing."></head><body class="policy"><div id="header" class="container_12"><div class="grid_7"><ul id="navigation"><li><a href="/">Home</a></li><li><a href="/tour">Tour</a></li><li><a href="/pricing">Pricing</a></li><li><a href="/company">Company</a></li><li><a href="http://support.agilezen.com/">Support</a></li><li><a href="http://blog.agilezen.com/">Blog</a></li><li><a href="/login">Log In</a></li></ul><div id="splash"><a id="logo" href="/">Zen</a><h1><a href="/">Project management gets lean</a></h1></div></div><div class="grid_5"><div id="bonsai"></div></div></div><div id="crossbar"><div class="container_12"><div class="grid_12"><p>Please take a moment to familiarize yourself with our terms of service, privacy policy, and billing policy.</p><p>If you have any questions or concerns, feel free to <a href="mailto:support@agilezen.com">let us know</a>!</p></div></div></div><div id="content" class="container_12"><div class="grid_12"><h2>Zen Privacy Policy</h2><p>
-			We collect the e-mail addresses of those who communicate with us via e-mail, aggregate information on what pages consumers
-			access or visit, and information volunteered by the consumer (such as survey information). The information we collect is
-			used to improve the content of our web pages and the quality of our service, and is <em>never</em> shared with or sold to other
-			organizations for commercial purposes.
+<!DOCTYPE html><html class=" webkit chrome linux js"><head><title>AgileZen – Privacy Policy</title><link rel="stylesheet" type="text/css" href="/content/css/bundle/external-3A6D740C44FEA670C477D3E3F5D5E82C.css"><link rel="shortcut icon" href="/content/images/favicon.ico" type="image/x-icon"><meta name="description" content="A simple, flexible, and cost-effective web-based project management application built on ideas from lean manufacturing."></head><body class="policy"><div id="header" class="container_12"><div class="grid_7"><ul id="navigation"><li><a href="/">Home</a></li><li><a href="/tour">Tour</a></li><li><a href="/pricing">Pricing</a></li><li><a href="/company">Company</a></li><li><a href="http://support.agilezen.com/">Support</a></li><li><a href="http://blog.agilezen.com/">Blog</a></li><li><a href="/login">Log In</a></li></ul><div id="splash"><a id="logo" href="/">AgileZen</a><h1><a href="/">Project management gets lean</a></h1></div></div><div class="grid_5"><div id="bonsai"></div></div></div><div id="crossbar"><div class="container_12"><div class="grid_12"><p>Please take a moment to familiarize yourself with our terms of service, privacy policy, and billing policy.</p><p>If you have any questions or concerns, feel free to <a href="mailto:support@agilezen.com">let us know</a>!</p></div></div></div><div id="content" class="container_12"><div class="grid_12"><h2>AgileZen Privacy Policy</h2><p>
+			Rally Software Development Corp. ("Rally") has created this privacy statement ("Statement") in order to demonstrate
+			our commitment to customer privacy. Privacy on the Rally web site (the "Site") is of great importance to us. Because
+			we gather important information from our visitors and customers, we have established this Statement as a means to
+			communicate our information gathering and dissemination practices. We reserve the right to change this Statement
+			and will provide notification of the change at least thirty (30) business days prior to the change taking effect.
+		</p><h3>Collected Information</h3><p>
+			We require customers who register to use the services ("Services") offered on our Site to give us contact information,
+			such as their name and e-mail address, and billing information, such as their credit card number. Rally uses the
+			information that we collect to set up Services for individuals and their organizations. We may also use the information
+			to contact customers to further discuss customer interest in our company, the Services that we provide, and to send
+			information regarding our company or partners, such as promotions and events. Customers are invited to receive periodic
+			communication via email by providing an email address. Customer email addresses and any personal customer information will
+			not be distributed or shared with any third parties other than Rally employees, consultants and representatives.
+			Customers can opt out of being contacted by us, or receiving such information from us, at any time by un-checking the
+			<em>receive email announcements</em> checkbox on the Settings page.
 		</p><p>
-			We will only share your confidential information under the following circumstances:
-			</p><ol><li>
-					It is necessary to share information in order to investigate, prevent, or take action regarding illegal activities,
-					suspected fraud, situations involving potential threats to the physical safety of any person, violations of
-					<a href="/policies/terms-of-service">Terms of Service</a>, or as otherwise required by law.
-				</li><li>
-					We transfer information about you if Enkari or Zen is acquired by or merged with another company. In this event,
-					Enkari will notify you before information about you is transferred and becomes subject to a different privacy policy.
-				</li></ol><p></p><p>
-			Enkari may periodically update this policy. We will notify you about significant changes in the way we treat personal
-			information by sending a notice to your email address or by placing a prominent notice on our site.
-		</p><h3>Information Gathering and Use</h3><ol><li>
-				When you register for Zen we ask for information such as your name, email address, and credit card information.
-				Users who sign up for the free account are not required to enter a credit card.
-			</li><li>
-				Enkari uses collected information for the following general purposes: products and services provision, billing,
-				identification and authentication, services improvement, contact, and research.
-			</li></ol><h3>Cookies</h3><p>
-			A cookie is a small amount of data, which often includes an anonymous unique identifier, that is sent to your
-			browser from a web site's computers and stored on your computer's hard drive. Cookies are <em>required</em> to use the Zen service.
-		</p><h3>Data Storage</h3><p>
-			Enkari uses third party vendors and hosting partners to provide the necessary hardware, software, networking,
-			storage, and related technology required to run Zen. Although Enkari owns the code, databases, and all rights
-			to the Zen application, you retain all rights to your data.
-		</p></div></div><div id="footer" class="container_12"><div class="grid_12"><div class="footer-container"><a class="enkari hover-effect" href="http://enkari.com/" rel="external">Enkari</a><div class="footer-content"><p>
-							Copyright ©2009 Enkari, Ltd. All rights reserved.
+			Except as we explicitly state at the time we request information, or as provided for in the <a href="/policies/terms-of-service">AgileZen Terms of Service</a>
+			or this Privacy Statement, we do not disclose to any third-party the information provided. All financial and billing
+			information that we collect through the Site is used solely to check the qualifications of prospective customers
+			and to bill for Services. This billing information is not used by Rally for marketing or promotional purposes.
+			Rally uses a third-party intermediary to manage the credit card processing. This intermediary is solely a link in
+			the distribution chain, and is not permitted to store, retain, or use the information provided, except for the
+			sole purpose of credit card processing. Other third parties, such as content providers, may provide content on
+			the Site but they are not permitted to collect any information nor does Rally share any user information with
+			these parties.
+		</p><p>
+			Customers of the Service will be using the Site to host data and information ("Data"). Rally will not review, share,
+			distribute, print, or reference any such Data except as provided in the <a href="/policies/terms-of-service">AgileZen Terms of Service</a>,
+			or as may be required by law. Individual records may at times be viewed or accessed only for the purpose of resolving
+			a problem, support issue, or suspected violation of the <a href="/policies/terms-of-service">AgileZen
+			Terms of Service</a>, or as may be required by law. Of course, customers are responsible for maintaining the
+			confidentiality and security of their user registration and password.
+		</p><p>
+			Rally may also collect certain information from visitors to and customers of the Site, such as Internet addresses.
+			This information is logged to help diagnose technical problems, and to administer our Site in order to constantly
+			improve the quality of the Service. We may also track and analyze non-identifying and aggregate usage and volume
+			statistical information from our visitors and customers and provide such information to third parties.
+		</p><h3>Cookies</h3><p>
+			When you interact with the Site we strive to make that experience easy and meaningful. When you come to our Site,
+			our Web server sends a cookie to your computer. Cookies are files that Web browsers place on a computer's hard drive
+			and are used to tell us whether customers and visitors have visited the Site previously.
+		</p><p>
+			Standing alone, cookies do not identify you personally. They merely recognize your browser. Unless you choose to
+			identify yourself to Rally, you remain anonymous to Rally. Cookies come in two flavors: session and persistent-based.
+			Session cookies exist only during an online session. They disappear from your computer when you close your browser
+			software or turn off your computer. Persistent cookies remain on your computer after you've closed your browser or
+			turned off your computer. They include such information as a unique identifier for your browser.
+		</p><p>
+			Rally uses session cookies containing encrypted information to allow the system to uniquely identify you while
+			you are logged in. This information allows Rally to process your online transactions and requests. Session cookies
+			help us make sure you are who you say you are after you've logged in and are required in order to use the Rally
+			application. Rally uses persistent cookies, that only Rally can read and use, to identify the fact that you are
+			a Rally customer or prior Rally Site visitor (whatever the case may be). We are especially careful about the
+			security and confidentiality of the information stored in persistent cookies. For example, we do not store account
+			numbers or passwords in persistent cookies. Users who disable their Web browsers' ability to accept cookies
+			will be able to browse our Site but will not be able to successfully use our service.
+		</p><h3>Third-Party Sites</h3><p>
+			The Site contains links to other web sites. Rally is not responsible for the privacy practices or the content of
+			these other web sites. Customers and visitors will need to check the policy statement of these others web sites
+			to understand their policies. Customers and visitors who access a linked site may be disclosing their private
+			information. It is the responsibility of the user to keep such information private and confidential.
+		</p><h3>Security</h3><p>
+			Our Site has security measures in place to help protect against the loss, misuse, and alteration of the Data
+			under our control. If your AgileZen plan supports it, Secure Socket Layer (SSL) technology is used to protect
+			information using both server authentication and data encryption to help ensure that Data is safe, secure, and
+			available only to you. Critical information such as your password and credit card number are always encrypted
+			using SSL, regardless of whether your plan lists SSL as a feature. Rally also implements an advanced security
+			method based on dynamic data and encoded session identifications, and hosts the Site in a secure server environment
+			that uses a firewall and other advanced technology to prevent interference or access from outside intruders.
+			Finally, Rally provides unique user names and passwords that must be entered each time a customer logs on.
+			These safeguards help prevent unauthorized access, maintain data accuracy, and ensure the appropriate use of Data.
+		</p><h3>Correcting &amp; Updating Your Information</h3><p>
+			You can update your contact information at any time by accessing the Settings page after you log in. From your
+			dashboard, you can also update your billing information by clicking the <em>Change Billing</em> button on
+			the account you would like to update. If you would like to discontinue service, you can do so by clicking the
+			<em>Delete Account</em> button on the account you wish to cancel.
+		</p><h3>Additional Information</h3><p>
+			Questions regarding this Statement or the practices of this Site should be directed to Rally's Security Administrator
+			by e-mailing such questions to <a href="mailto:security@rallydev.com">security@rallydev.com</a>.
+		</p></div></div><div id="footer" class="container_12"><div class="grid_12"><div class="footer-container"><a class="rally hover-effect" href="http://rallydev.com/" rel="external" target="_blank" style="position: relative;">Rally Software - Agile Project Management<span class="hover" style="width: 75px; height: 50px; position: absolute; cursor: pointer; display: block; opacity: 0; top: 0px; left: 0px; padding: 0px; background-image: url(&quot;https://web.archive.org/web/20100917030930im_/http://agilezen.com/content/images/external/rally.png&quot;); background-repeat: no-repeat;"></span></a><div class="footer-content"><p>
+							Copyright ©2010 Rally Software Development Corp.
 						</p><p><a href="/policies/terms-of-service">Terms of Service</a> –
 							<a href="/policies/privacy">Privacy Policy</a> –
 							<a href="/policies/billing">Billing Policy</a> –
-							<a href="http://learn.agilezen.com/">Developer API</a></p></div></div></div></div><script type="text/javascript" src="/content/js/bundle/external.js?t=20100302063620"></script><script type="text/javascript" src="/content/js/routes.js"></script><script type="text/javascript">
+							<a href="http://learn.agilezen.com/">Developer API</a></p></div></div></div></div><script type="text/javascript" src="/content/js/bundle/external-908A68BD1BBA55F0BFAE8B61F87D2173.js"></script><script type="text/javascript" src="/content/js/routes.js"></script><script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script><script type="text/javascript">
@@ -44,4 +94,4 @@
 		var pageTracker = _gat._getTracker("UA-501149-7");
 		pageTracker._trackPageview();
 	} catch (err) { }
-</script></body></html>
+</script><div id="fancy_overlay"></div><div id="fancy_wrap"><div class="fancy_loading" id="fancy_loading"><div></div></div><div id="fancy_outer"><div id="fancy_inner"><div id="fancy_close"></div><div id="fancy_bg"><div class="fancy_bg fancy_bg_n"></div><div class="fancy_bg fancy_bg_ne"></div><div class="fancy_bg fancy_bg_e"></div><div class="fancy_bg fancy_bg_se"></div><div class="fancy_bg fancy_bg_s"></div><div class="fancy_bg fancy_bg_sw"></div><div class="fancy_bg fancy_bg_w"></div><div class="fancy_bg fancy_bg_nw"></div></div><a href="javascript:;" id="fancy_left"><span class="fancy_ico" id="fancy_left_ico"></span></a><a href="javascript:;" id="fancy_right"><span class="fancy_ico" id="fancy_right_ico"></span></a><div id="fancy_content"></div><div id="fancy_title"><table cellspacing="0" cellpadding="0" border="0"><tbody><tr><td class="fancy_title" id="fancy_title_left"></td><td class="fancy_title" id="fancy_title_main"><div></div></td><td class="fancy_title" id="fancy_title_right"></td></tr></tbody></table></div></div></div></div></body></html>
