--- a/a/ar/arr/arrisi.com.html
+++ b/a/ar/arr/arrisi.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the arrisi.com privacy policy that was archived on 2010-01-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100103162649id_/http%3A//www.arrisi.com/privacy_policy/index.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the arrisi.com privacy policy that was archived on 2010-09-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100917072247id_/http%3A//arrisi.com/privacy_policy/index.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/sub_privacy_policy.dwt.asp" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -222,14 +222,8 @@ function MM_swapImage() { //v3.0
         <tbody><tr>
           <td width="13%"><img src="/_images/_includes/left_nav_bottom/20x5_spacer.gif" width="20" height="5"></td>
           <td width="5%" class="leftnav2"><img src="/_images/arrow.gif" width="7" height="7"></td>
-          <td width="77%" class="leftnav2"><a href="/press_events/press_releases/presslist.asp?pdate=2009">Press Releases</a></td>
+          <td width="77%" class="leftnav2"><a href="http://ir.arrisi.com/phoenix.zhtml?c=87823&amp;p=irol-news&amp;nyo=0">Press Releases</a></td>
           <td width="5%"><img src="/_images/_includes/left_nav_bottom/20x5_spacer.gif" alt="" width="20" height="5"></td>
-        </tr>
-        <tr>
-          <td><img src="/_images/_includes/left_nav_bottom/20x5_spacer.gif" alt="" width="20" height="5"></td>
-          <td class="leftnav2"><img src="/_images/arrow.gif" alt="" width="7" height="7"></td>
-          <td class="leftnav2"><a href="/press_events/press_archive/index.asp">Press Release Archive</a></td>
-          <td><img src="/_images/_includes/left_nav_bottom/20x5_spacer.gif" alt="" width="20" height="5"></td>
         </tr>
         <tr>
           <td><img src="/_images/_includes/left_nav_bottom/20x5_spacer.gif" alt="" width="20" height="5"></td>
@@ -246,7 +240,7 @@ function MM_swapImage() { //v3.0
         <tr>
           <td><img src="/_images/_includes/left_nav_bottom/20x5_spacer.gif" alt="" width="20" height="5"></td>
           <td class="leftnav2"><img src="/_images/arrow.gif" alt="" width="7" height="7"></td>
-          <td class="leftnav2"><a href="/press_events/events/index.asp?end_date=1/3/2010">ARRIS Events</a></td>
+          <td class="leftnav2"><a href="/press_events/events/index.asp?end_date=9/17/2010">ARRIS Events</a></td>
           <td><img src="/_images/_includes/left_nav_bottom/20x5_spacer.gif" alt="" width="20" height="5"></td>
         </tr>
         
@@ -421,8 +415,9 @@ function MM_swapImage() { //v3.0
     <td height="10" bgcolor="#F5F5F5"><img src="../images/spacer.gif" width="1" height="10"></td>
   </tr>
   <tr>
-    <td><link href="/_css/site.css" rel="stylesheet" type="text/css"><p align="center" class="crumb3"><a href="/privacy_policy/index.asp">Privacy Policy</a> | <a href="/about_us/contact_us/_feedback/index.asp">Feedback</a> | © 1995 - 2009 ARRIS Group, Inc. All Rights Reserved
-<script type="text/javascript">
+    <td><link href="/_css/site.css" rel="stylesheet" type="text/css">
+<p align="center" class="crumb3"><a href="/privacy_policy/index.asp">Privacy Policy</a> | <a href="/about_us/contact_us/_feedback/index.asp">Feedback</a> | © 1995 - 2010 ARRIS Group, Inc. All Rights Reserved
+  <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
