--- a/r/ra/rai/rainbownation.com.html
+++ b/r/ra/rai/rainbownation.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rainbownation.com privacy policy that was archived on 2010-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100604024201id_/http%3A//www.rainbownation.com/about/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rainbownation.com privacy policy that was archived on 2010-09-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100918040452id_/http%3A//www.rainbownation.com/about/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -91,20 +91,12 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   </div> <!-- End of Header -->
 <!--Start of Content-->
   <div id="rightbar">
-    <div class="adpad"><script type="text/javascript"><!--
-google_ad_client = "pub-5736355482830404";
-//Front Page 300x250, created 17/01/08
-google_ad_slot = "4916665584";
-google_ad_width = 300;
-google_ad_height = 250;
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></div>
+    <div class="adpad"></div>
 
   <div class="clearfloat"></div>
 </div>
   <div id="mainContent">
- 		<div id="mainTop">Friday, 4th June 2010
+ 		<div id="mainTop">Saturday, 18th September 2010
     	</div>
     <h1>Your Privacy on Rainbow Nation </h1>
 RainbowNation is committed to protecting your privacy. This 
