--- a/s/sc/scr/scribblemaps.com.html
+++ b/s/sc/scr/scribblemaps.com.html
@@ -1,29 +1,67 @@
-<!--The following is the downloaded HTML source of the scribblemaps.com privacy policy that was archived on 2010-04-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100411025841id_/http%3A//www.scribblemaps.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the scribblemaps.com privacy policy that was archived on 2010-09-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100918121350id_/http%3A//www.scribblemaps.com/privacypolicy.html) for the most accurate reproduction.-->
 
-<html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="Templates/Main.dwt" codeOutsideHTMLIsLocked="false" --><head>
+<link type="text/css" rel="stylesheet" href="static.css">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<!-- InstanceBeginEditable name="doctitle" -->
 <title>Scribble Maps Privacy Policy</title>
+<style>
+	.headerLogo {
+		background-image: url(images/header.png);
+		width: 500px;
+	}
+</style>
+<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
 </head>
 
-<body style="width: 500px">
-<b>Privacy Policy for scribblemaps.com</b>
-<br><br>
-The privacy of our visitors to scribblemaps.com is important to us. 
-<br><br>
-At scribblemaps.com, we recognize that privacy of your personal information is important. Here is information on what types of personal information we receive and collect when you use and visit scribblemaps.com, and how we safeguard your information.  We never sell your personal information to third parties.
-<br><br>
-<b>Map Files</b><br>
-All maps are saved to a scribblemaps.com database. We do not publically distribute the IDs of maps, however, all saved maps are publically accessible through their Map ID.
-<br><br>
-<b>Log Files</b><br>
-As with most other websites, we collect and use the data contained in log files.  The information in the log files include  your IP (internet protocol) address, your ISP (internet service provider, such as AOL or Shaw Cable), the browser you used to visit our site (such as Internet Explorer or Firefox), the time you visited our site and which pages you visited throughout our site. 
-<br><br>
-<b>Cookies and Web Beacons</b><br>
-We do use cookies to store information, such as your personal preferences when you visit our site.  This could include only showing you a popup once in your visit, or the ability to login to some of our features, such as forums.
-<br><br>
-We also use third party advertisements on scribblemaps.com to support our site.  Some of these advertisers may use technology such as cookies and web beacons when they advertise on our site, which will also send these advertisers (such as Google through the Google AdSense program) information including your IP address, your ISP , the browser you used to visit our site, and in some cases, whether you have Flash installed.  This is generally used for geotargeting purposes (showing New York real estate ads to someone in New York, for example) or showing certain ads based on specific sites visited (such as showing cooking ads to someone who frequents cooking sites).
-<br><br>
-You can chose to disable or selectively turn off our cookies or third-party cookies in your browser settings, or by managing preferences in programs such as Norton Internet Security.  However, this can affect how you are able to interact with our site as well as other websites.  This could include the inability to login to services or programs, such as logging into forums or accounts.
+<body>
+<div class="content">
+    <div class="header">
+      <div class="headerLogo"></div>
+    </div>
+    <div class="bodyContent">
+            <div id="google_translate_element" style="margin: auto; width: 150px; margin-bottom: 15px"></div><script>
+            function googleTranslateElementInit() {
+              new google.translate.TranslateElement({
+                pageLanguage: 'en'
+              }, 'google_translate_element');
+            }
+            </script><script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+            <div class="clear"></div>
+        <!-- InstanceBeginEditable name="Content" -->
+		<div class="termItem">
+        <h1>Privacy Policy</h1>
+        The privacy of our visitors to scribblemaps.com is important to us. 
+        
+        At scribblemaps.com, we recognize that privacy of your personal information is important. Here is information on what types of personal information we receive and collect when you use and visit scribblemaps.com, and how we safeguard your information. We never sell your personal information to third parties. 
+        </div>
+<div class="termItem">
+<h2>Map Files</h2>
+All maps are saved to a scribblemaps.com database. We do not publically distribute the IDs of maps, however, all saved maps are publically accessible through their Map ID. 
+</div>
+<div class="termItem">
+<h2>Log Files</h2>
+As with most other websites, we collect and use the data contained in log files. The information in the log files include your IP (internet protocol) address, your ISP (internet service provider, such as AOL or Shaw Cable), the browser you used to visit our site (such as Internet Explorer or Firefox), the time you visited our site and which pages you visited throughout our site. 
+</div>
+<div class="termItem">
+<h2>Cookies and Web Beacons</h2>
+We do use cookies to store information, such as your personal preferences when you visit our site. This could include only showing you a popup once in your visit, or the ability to login to some of our features, such as forums. 
+<br>
+<br>
+We also use third party advertisements on scribblemaps.com to support our site. Some of these advertisers may use technology such as cookies and web beacons when they advertise on our site, which will also send these advertisers (such as Google through the Google AdSense program) information including your IP address, your ISP , the browser you used to visit our site, and in some cases, whether you have Flash installed. This is generally used for geotargeting purposes (showing New York real estate ads to someone in New York, for example) or showing certain ads based on specific sites visited (such as showing cooking ads to someone who frequents cooking sites). 
+<br>
+<br>
+You can chose to disable or selectively turn off our cookies or third-party cookies in your browser settings, or by managing preferences in programs such as Norton Internet Security. However, this can affect how you are able to interact with our site as well as other websites. This could include the inability to login to services or programs, such as logging into forums or accounts.        </div>
+</div>
+
+		<!-- InstanceEndEditable -->
+	</div>
+
+            
 
 
+<!-- InstanceEnd -->
 </body></html>
