soundike.com (archived on 2010-09-18)
{
  "alexa_rank": 141691,
  "analysis_subcorpus": true,
  "categories": "business;education;entertainment",
  "char_count": 2731,
  "classifier_probability": 0.83,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.4,
  "homepage_snapshot_redirected_domain": "soundike.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100926165509id_/http://www.soundike.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100926165509id_/http%3A//soundike.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "soundike.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100918125007id_/http%3A//www.soundike.com/help9.html",
  "policy_title": "Soundike.com Help",
  "policy_url": "soundike.com/help9.html",
  "sha1": "a2005734e42ba28cf876248d59152504fee67b5c",
  "simhash": 17803023337462455916,
  "simhash_updated": false,
  "site_hostname": "soundike.com",
  "site_url": "http://soundike.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100918125007",
  "word_count": 431,
  "year": 2010
}

--- a/s/so/sou/soundike.com.html
+++ b/s/so/sou/soundike.com.html
@@ -1,10 +1,23 @@
-<!--The following is the downloaded HTML source of the soundike.com privacy policy that was archived on 2009-02-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090216144105id_/http%3A//www.soundike.com/help3.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the soundike.com privacy policy that was archived on 2010-09-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100918125007id_/http%3A//www.soundike.com/help9.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ru" lang="ru"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>Soundike.com Help</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="description" content="MP3, Music, MP3s, music downloads, mp3 downloads, new releases, popular music, classical music, music samples, legal mp3 downloads">
+	<meta name="description" content="Legally purchase cheap mp3 music. Instantly download full albums and enjoy every track. New albums added daily.">
+	<meta name="abstract" content="Legally purchase cheap mp3 music online. Instantly download full albums and enjoy every track. New albums added daily. More than 30000 artists and over 1100000 songs.">
+	<meta name="keywords" content="buy legal mp3 music mp3s music downloads mp3 new releases popular classical music downloads songs cheap albums">
+	<meta name="distribution" content="Global">
+	<meta name="Document-state" content="Dynamic">
+	<meta name="rating" content="General">
+	<meta name="revisit" content="7 days">
+	<meta name="revisit-after" content="7 days">
+	<meta name="resource-type" content="document">
+	<meta name="audience" content="all">
+	<meta name="robots" content="index, follow">
+	<meta name="robots" content="index, all">
+	<meta name="Publisher_location" content="US">
+	<meta name="home_url" content="http://www.soundike.com/">
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="/css/common.css">
 	<link rel="stylesheet" type="text/css" href="/css/otherpage.css">
@@ -17,18 +30,16 @@
 	<link href="/rssweek.xml" rel="alternate" type="application/rss+xml" title="This Week Mp3">
 	<link href="/rssmonth.xml" rel="alternate" type="application/rss+xml" title="This Month Mp3">
 </head><body>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
+<script type="text/javascript" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript">
 var pageTracker = _gat._getTracker("UA-5389229-2");
 pageTracker._trackPageview();
 </script>
 	<div class="container">
-	<div class="header-bg"><!-- --></div>
+		<div class="header-bg"><!-- --></div>
 	<div class="header">
-			<div class="logo"><a href="/"><img src="/imgs/blank.gif" alt="Soundike.com - Mp3 Music Downloads, Buy New Releases" width="239" height="190"></a></div>
+	
+					<div class="logo"><a href="/"><img src="/imgs/logo.jpg" alt="Soundike.com - Mp3 Music Downloads, Buy New Releases"></a></div>*}
+						
 		<form action="/search.html" id="search_form">
 		<div class="search">
 			<div class="search-p"><label>Search</label></div>
@@ -38,7 +49,7 @@ pageTracker._trackPageview();
 		</div>
 		</form>
 		<script type="text/javascript">document.getElementById('autocomplete').setAttribute("autocomplete", "off")</script>
-			<form action="/help3.html" method="post" id="lform">
+			<form action="/help9.html" method="post" id="lform">
         <input type="hidden" name="login" value="1">
         <div class="login">
 			<div><label>E-MAIL</label><input type="text" class="input" name="email">&nbsp;</div>
@@ -49,7 +60,7 @@ pageTracker._trackPageview();
 		</div>
 		</form>
 			<div class="menu">
-			<a href="/">New Releases</a>
+			<a href="/new_releases_2010-09-02.html">New Releases</a>
 			<a href="/music_genres.html">Music Genres</a>
 			<a href="/music_genres/24_Soundtracks.html">Soundtracks</a>
 			<a href="/music_genres/32_Classical.html">Classical</a>
@@ -88,10 +99,10 @@ pageTracker._trackPageview();
 	        </div>
 		<div class="ico">
 			<div class="map">
-				<!--<a href="" onclick="return false;"><img src="/imgs/lang-de.gif" alt="" /></a>-->
-				<a href="" onclick="return false;"><img src="/imgs/lang-fr.gif" alt=""></a>
+				<!--<a href="" onclick="return false;"><img src="/imgs/lang-de.gif" alt="" /></a>
+				<a href="" onclick="return false;"><img src="/imgs/lang-fr.gif" alt="" /></a>-->
 			</div>
-			<div class="link"><a href="/sitemap.html">site map</a> | <a href="/help.html" rel="nofollow">help</a></div>
+			<div class="link"><a href="/sitemap.html">site map</a> | <a href="/help.html" rel="nofollow">faq</a></div>
 		</div>
 	</div>
 	
@@ -100,7 +111,7 @@ pageTracker._trackPageview();
 			<div class="breadcrumbs3">
 				<div class="breadcrumbs-p">
 					<div class="fr ar">
-						<a href="/rssweek.xml"><img src="/imgs/b-rss.gif" alt="RSS Soundike"></a>
+						<div class="support">Live support 24/7 - 1 (800) 763-8241</div><div><a href="/rssweek.xml"><img src="/imgs/b-rss.gif" alt="RSS Soundike"></a></div>
 					</div>
 		
 				<div class="fl"><a href="/">Soundike.com</a> -- Help</div>
@@ -112,37 +123,39 @@ pageTracker._trackPageview();
 	<div class="menu"></div>
 	
 		<div class="m-left">
-		<a href="/signup.html" rel="nofollow"><img src="/imgs/signup2_2.jpg" alt="Signup"></a>
+
+		<a href="/signup.html" rel="nofollow"><img src="/imgs/signup2_33.jpg" alt="Signup"></a>
 		<div class="spacer s10"><!-- --></div>
+
 
 		<h1 class="b-bestsellers"><span>bestsellers</span></h1>
 		<div class="b-container">
 			<div>
-				<a href="/album/113382_Adele_19_mp3_download.html"><img src="/covers/60/48/093048.jpg" width="60" height="60" alt="Adele - 19 Mp3"></a>
-				<a href="/artist/50212_Adele_mp3_download.html" class="b" title="Adele Mp3">Adele</a><br><a href="/album/113382_Adele_19_mp3_download.html" title="Adele - 19 Mp3">19</a>
+				<a href="/album/172568_Michael_Bubl%C3%A9_Crazy_Love_mp3_download.html"><img src="/covers/60/13/147013.jpg" width="60" height="60" alt="Michael Bublé - Crazy Love Mp3"></a>
+				<a href="/artist/17679_Michael_Bubl%C3%A9_mp3_download.html" class="b" title="Michael Bublé Mp3">Michael Bublé</a><br><a href="/album/172568_Michael_Bubl%C3%A9_Crazy_Love_mp3_download.html" title="Michael Bublé - Crazy Love Mp3">Crazy Love</a>
 			</div>
 			<div class="on">
-				<a href="/album/115740_Jason_Mraz_We_Sing%2C_We_Dance%2C_We_Steal_Things_mp3_download.html"><img src="/covers/60/32/095232.jpg" width="60" height="60" alt="Jason Mraz - We Sing, We Dance, We Steal Things Mp3"></a>
-				<a href="/artist/13142_Jason_Mraz_mp3_download.html" class="b" title="Jason Mraz Mp3">Jason Mraz</a><br><a href="/album/115740_Jason_Mraz_We_Sing%2C_We_Dance%2C_We_Steal_Things_mp3_download.html" title="Jason Mraz - We Sing, We Dance, We Steal Things Mp3">We Sing, We Dance, We Steal Things</a>
+				<a href="/album/173926_The_Black_Eyed_Peas_The_E.N.D_mp3_download.html"><img src="/covers/60/95/148195.jpg" width="60" height="60" alt="The Black Eyed Peas - The E.N.D Mp3"></a>
+				<a href="/artist/45254_The_Black_Eyed_Peas_mp3_download.html" class="b" title="The Black Eyed Peas Mp3">The Black Eyed Peas</a><br><a href="/album/173926_The_Black_Eyed_Peas_The_E.N.D_mp3_download.html" title="The Black Eyed Peas - The E.N.D Mp3">The E.N.D</a>
 			</div>
 			<div>
-				<a href="/album/121273_Taylor_Swift_Fearless_mp3_download.html"><img src="/covers/60/78/100378.jpg" width="60" height="60" alt="Taylor Swift - Fearless Mp3"></a>
-				<a href="/artist/25305_Taylor_Swift_mp3_download.html" class="b" title="Taylor Swift Mp3">Taylor Swift</a><br><a href="/album/121273_Taylor_Swift_Fearless_mp3_download.html" title="Taylor Swift - Fearless Mp3">Fearless</a>
+				<a href="/album/194179_Eminem_Recovery_mp3_download.html"><img src="/covers/60/26/163626.jpg" width="60" height="60" alt="Eminem - Recovery Mp3"></a>
+				<a href="/artist/8781_Eminem_mp3_download.html" class="b" title="Eminem Mp3">Eminem</a><br><a href="/album/194179_Eminem_Recovery_mp3_download.html" title="Eminem - Recovery Mp3">Recovery</a>
 			</div>
 			<div class="on">
-				<a href="/album/126685_Bruce_Springsteen_Working_On_A_Dream_mp3_download.html"><img src="/covers/60/99/105299.jpg" width="60" height="60" alt="Bruce Springsteen - Working On A Dream Mp3"></a>
-				<a href="/artist/3879_Bruce_Springsteen_mp3_download.html" class="b" title="Bruce Springsteen Mp3">Bruce Springsteen</a><br><a href="/album/126685_Bruce_Springsteen_Working_On_A_Dream_mp3_download.html" title="Bruce Springsteen - Working On A Dream Mp3">Working On A Dream</a>
+				<a href="/album/198259_Arcade_Fire_The_Suburbs_mp3_download.html"><img src="/covers/60/36/169436.jpg" width="60" height="60" alt="Arcade Fire - The Suburbs Mp3"></a>
+				<a href="/artist/1593_Arcade_Fire_mp3_download.html" class="b" title="Arcade Fire Mp3">Arcade Fire</a><br><a href="/album/198259_Arcade_Fire_The_Suburbs_mp3_download.html" title="Arcade Fire - The Suburbs Mp3">The Suburbs</a>
 			</div>
 			<div>
-				<a href="/album/116336_Coldplay_Viva_La_Vida_or_Death_And_All_His_Friends_mp3_download.html"><img src="/covers/60/93/095793.jpg" width="60" height="60" alt="Coldplay - Viva La Vida or Death And All His Friends Mp3"></a>
-				<a href="/artist/5350_Coldplay_mp3_download.html" class="b" title="Coldplay Mp3">Coldplay</a><br><a href="/album/116336_Coldplay_Viva_La_Vida_or_Death_And_All_His_Friends_mp3_download.html" title="Coldplay - Viva La Vida or Death And All His Friends Mp3">Viva La Vida or Death And All His Friends</a>
+				<a href="/album/198688_John_Mellencamp_No_Better_Than_This_mp3_download.html"><img src="/covers/60/64/169764.jpg" width="60" height="60" alt="John Mellencamp - No Better Than This Mp3"></a>
+				<a href="/artist/13741_John_Mellencamp_mp3_download.html" class="b" title="John Mellencamp Mp3">John Mellencamp</a><br><a href="/album/198688_John_Mellencamp_No_Better_Than_This_mp3_download.html" title="John Mellencamp - No Better Than This Mp3">No Better Than This</a>
 			</div>
 			<div class="on">
-				<a href="/album/118447_Kings_Of_Leon_Only_By_The_Night_mp3_download.html"><img src="/covers/60/92/097792.jpg" width="60" height="60" alt="Kings Of Leon - Only By The Night Mp3"></a>
-				<a href="/artist/14797_Kings_Of_Leon_mp3_download.html" class="b" title="Kings Of Leon Mp3">Kings Of Leon</a><br><a href="/album/118447_Kings_Of_Leon_Only_By_The_Night_mp3_download.html" title="Kings Of Leon - Only By The Night Mp3">Only By The Night</a>
+				<a href="/album/199768_Katy_Perry_Teenage_Dream_mp3_download.html"><img src="/covers/60/37/170737.jpg" width="60" height="60" alt="Katy Perry - Teenage Dream Mp3"></a>
+				<a href="/artist/52937_Katy_Perry_mp3_download.html" class="b" title="Katy Perry Mp3">Katy Perry</a><br><a href="/album/199768_Katy_Perry_Teenage_Dream_mp3_download.html" title="Katy Perry - Teenage Dream Mp3">Teenage Dream</a>
 			</div>
 		</div>
-		<a href="/chart/11_Soundike_Bestsellers.html" class="all-best" title="All bestsellers">ALL BESTSELLERS</a>
+		<a href="/chart/11_Bestsellers.html" class="all-best" title="All bestsellers">ALL BESTSELLERS</a>
 		</div>
 	<div class="m-middle-help">
 		<h1><span>
@@ -151,49 +164,45 @@ pageTracker._trackPageview();
 		<div class="spacer s5 grey"><!-- --></div>
 		<div class="help">
 		<p class="help-payments" style="margin-bottom: -20px;">&nbsp;</p>
-				<p>This Privacy Policy explains how the web site soundike.com collects and stores your personal information, when you are using our services. Before proceeding with your registration process on this web site you must:</p>
+				<p>This Privacy Policy explains how the web site Soundike.com collects and stores your personal information, when you are using our services. Before proceeding with your registration process on this web site you must:</p>
 				<p>- Read and fully understand this Privacy Policy</p>
 				<p>- Completely agree with all the terms in this Privacy Policy</p>
 				<p>If you don't agree with at least one term of this Privacy Policy, you don't have the right to proceed with the registration process, and must leave web site immediately.</p>
 				<p>Administration of the web site has a right to make changes/additions to this Privacy Policy from time to time, without prior notice to the user.</p>
-				<p>Careful attitude towards confidential information of our users is a cornerstone underlying work of soundike.com project. Ability to prevent outflow and wrongful use of the important information in the Internet-environment, in which the information extends most easily, is the base for high reputation of the Internet-project.</p>
+				<p>Careful attitude towards confidential information of our users is a cornerstone underlying work of Soundike.com project. Ability to prevent outflow and wrongful use of the important information in the Internet-environment, in which the information extends most easily, is the base for high reputation of the Internet-project.</p>
 				<p class="help-payments">Personal Information</p>
-				<p>soundike.com collects personal information so that we can improve our services, to organize effective interaction with our visitors, to organize effective technical support, to inform our users about news and updates, and also to track downloaded files so that we can pay royalties to the Rightholders.</p>
+				<p>Soundike.com collects personal information so that we can improve our services, to organize effective interaction with our visitors, to organize effective technical support, to inform our users about news and updates, and also to track downloaded files so that we can pay royalties to the Rightholders.</p>
 				<p>Administration guarantees, that all the personal information that you provide will never be disclosed to the 3rd parties without your agreement, except in the cases described in term 4 of this Privacy Policy.</p>
 				<p class="help-payments">Financial Information</p>
 				<p>When paying for services provided by us, users transfer the information about payment means (the information on credit cards, etc.) to the companies, engaged for processing of these payments. Transfer of such information is carried out through safe SSL connection on sites of such companies and data about payment means are not accessible to us.</p>
 				<p class="help-payments">Other Technical Information</p>
-				<p>Service soundike.com in its work operates with IP-addresses of the visitors and cookies on their personal computers. It is a standard practice necessary for effective work of a dynamical resource, prevention of technical problems and for protection of financial operations. Besides cookies are necessary for identification of the user, and if you disable them, work with the site can be essentially complicated.</p>
+				<p>Service Soundike.com in its work operates with IP-addresses of the visitors and cookies on their personal computers. It is a standard practice necessary for effective work of a dynamical resource, prevention of technical problems and for protection of financial operations. Besides cookies are necessary for identification of the user, and if you disable them, work with the site can be essentially complicated.</p>
 				<p class="help-payments">Exemption from Liability</p>
-				<p>soundike.com can disclose your Personal Information only in cases stipulated by the Laws of Russian Federation.</p>
-				<p>soundike.com can contain links to the web sites of 3rd parties. soundike.com doesn't take any responsibility for functioning and the resources of those sites, and also the possible damage caused by working with them.</p>
+				<p>Soundike.com can contain links to the web sites of 3rd parties. Soundike.com doesn't take any responsibility for functioning and the resources of those sites, and also the possible damage caused by working with them.</p>
 				<p>We value relationship with each user of our service and consequently, we will do everything depending on us that our cooperation brings only positive results to you.</p>
 			<div class="spacer"><!-- --></div>
 		</div>
 		<div class="help-bot"><!-- --></div>
 	</div>
 	<div class="m-right-help">
-		<h1><span>Help contents</span></h1>
+			<h1><span>Help contents</span></h1>
 		<div class="help-contents">
-			<a href="/help.html">Terms of Use</a><br>
-			<a href="/help2.html">Legal Notice</a><br>
-			<a href="/help3.html" class="on">Privacy Policy</a><br>
-			<a href="/help4.html">Registration</a><br>
-			<a href="/help5.html">Paying for the Services</a><br>
-			<a href="/help6.html">Contacts</a><br>
+			<a href="/help7.html">Terms and Conditions</a><br>
+			<a href="/help8.html">Legal Notice</a><br>
+			<a href="/help9.html" class="on">Privacy Policy</a><br>
+			<a href="/help10.html">Contacts</a><br>
 		</div>
-	</div>
+		</div>
 	<div class="spacer s15"><!-- --></div>
 	<div class="footer">
 		<div class="m-left">
 			<div class="footer-border">
-				<img src="/imgs/i-copy.gif" alt="">© 2004-2009, <a href="/">www.soundike.com</a>
-			</div>
+				<img src="/imgs/i-copy.gif" alt="">© 2004-2010, <a href="/">www.soundike.com</a>			</div>
 			&nbsp;&nbsp;&nbsp;Support e-mail: <a href="mailto:support@soundike.com">support@soundike.com</a>
 		</div>
 		<div class="m-middle">
 			<div class="footer-border">
-				<a href="/help2.html" rel="nofollow">Legal Notice</a><a href="/help1.html" rel="nofollow">Terms of Use</a><a href="/help3.html" rel="nofollow">Privacy Policy</a><a href="/help4.html" rel="nofollow">Registration</a><a href="/help5.html" rel="nofollow">Paying for Services</a><a href="/help6.html" rel="nofollow">Contacts</a>
+				<a href="/help7.html" rel="nofollow">Terms and Conditions</a><a href="/help8.html" rel="nofollow">Legal Notice</a><a href="/help9.html" rel="nofollow">Privacy Policy</a><a href="/help10.html" rel="nofollow">Contacts</a>
 			</div>
 			The works available from SOUNDIKE.COM are protected by the Law "On Copyright and Related Rights" and are for personal use of a buyer. Commercial use of such material is prohibited. Recording, copying, distribution on any media is possible only upon special consent of a Rightholder.
 		</div>
@@ -207,7 +216,7 @@ escape(document.referrer)+((typeof(screen)=="undefined")?"":
 ";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
 screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 ";"+Math.random()+
-"' alt= "+"border=0 width=1 height=1><\/a>")//--></script><a href="http://www.liveinternet.ru/click" target="_blank"><img src="http://counter.yadro.ru/hit?t25.5;r;s800*600*24;uhttps%3A//web.archive.org/web/20090216144105id_/http%253A//www.soundike.com/help3.html;0.9746576991489297" alt="border=0" width="1" height="1"></a>
+"' alt= "+"border=0 width=1 height=1><\/a>")//--></script><a href="http://www.liveinternet.ru/click" target="_blank"><img src="http://counter.yadro.ru/hit?t25.5;r;s800*600*24;uhttps%3A//web.archive.org/web/20100918125007id_/http%253A//www.soundike.com/help9.html;0.9785512907712954" alt="border=0" width="1" height="1"></a>
 				<img src="/imgs/i-dev.gif" alt="">Site design by <a href="http://www.orangeonweb.com" target="_blank" rel="nofollow">Orangeonweb.com</a>
 				</noindex>
 			</div>
