--- a/c/co/con/conspiracyoftherich.com.html
+++ b/c/co/con/conspiracyoftherich.com.html
@@ -1,26 +1,27 @@
-<!--The following is the downloaded HTML source of the conspiracyoftherich.com privacy policy that was archived on 2010-01-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100111080257id_/http%3A//www.conspiracyoftherich.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the conspiracyoftherich.com privacy policy that was archived on 2010-09-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100919235649id_/http%3A//conspiracyoftherich.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Privacy policy | Conspiracy of the Rich: The 8 New Rules of Money</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?X">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/simplenews/simplenews.css?X">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?X">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?X">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?X">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?X">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?X">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?X">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/fivestar/css/fivestar.css?X">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/fivestar/basic/basic.css?X">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/logintoboggan/logintoboggan.css?X">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/forum/forum.css?X">
-<link type="text/css" rel="stylesheet" media="all" href="/themes/rd_final2/style.css?X">
-    <script type="text/javascript" src="/misc/jquery.js?X"></script>
-<script type="text/javascript" src="/misc/drupal.js?X"></script>
-<script type="text/javascript" src="/sites/all/modules/fivestar/js/fivestar.js?X"></script>
+    <link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?i">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?i">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?i">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?i">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?i">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?i">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?i">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/fivestar/css/fivestar.css?i">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/fivestar/basic/basic.css?i">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/logintoboggan/logintoboggan.css?i">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/simplenews/simplenews.css?i">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/forum/forum.css?i">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/views/css/views.css?i">
+<link type="text/css" rel="stylesheet" media="all" href="/themes/rd_final2/style.css?i">
+    <script type="text/javascript" src="/misc/jquery.js?i"></script>
+<script type="text/javascript" src="/misc/drupal.js?i"></script>
+<script type="text/javascript" src="/sites/all/modules/fivestar/js/fivestar.js?i"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, { "basePath": "/", "fivestar": { "titleUser": "Your rating: ", "titleAverage": "Average: ", "feedbackSavingVote": "Saving your vote...", "feedbackVoteSaved": "Your vote has been saved.", "feedbackDeletingVote": "Deleting your vote...", "feedbackVoteDeleted": "Your vote has been deleted." } });
@@ -44,9 +45,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "fivestar": { "titleUser": "Yo
                 <div class="right">
                     <div class="top">
 						<div class="top_nav">  <div id="block-addthis" class="block-addthis-0">
-      <a href="http://www.addthis.com/bookmark.php" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()"><img src="http://s9.addthis.com/button1-share.gif" width="125" height="16" alt=""></a>
-      <script type="text/javascript" src="http://s7.addthis.com/js/152/addthis_widget.js"></script>
-      </div>
+      <a class="addthis-button" href="http://www.addthis.com/bookmark.php" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()"><img src="http://s9.addthis.com/button1-share.gif" width="125" height="16" alt="&quot;&quot;"></a><script type="text/javascript" src="http://s7.addthis.com/js/152/addthis_widget.js"></script></div>
 						
 						
 						<a href="/user/login" rel="nofollow">Login</a> | <a href="/user/password" rel="nofollow">Forgot Your Password</a> | <a href="/user/register" rel="nofollow">Register</a>						|&nbsp;<a href="/need-help">Need Help?</a>
@@ -160,17 +159,17 @@ Scottsdale, AZ‎  85251</p>
 		<div id="rightcolumn">
 		  <div id="block-user" class="block-user-0"><form action="/privacy-policy?destination=node%2F5" accept-charset="UTF-8" method="post" id="user-login-form">
 <div><div class="form-item" id="edit-name-wrapper">
- <label for="edit-name">Username: <span class="form-required" title="This field is required.">*</span></label>
- <input type="text" maxlength="60" name="name" id="edit-name" size="15" value="" tabindex="1" class="form-text required">
+ <label for="edit-name">Username or e-mail: <span class="form-required" title="This field is required.">*</span></label>
+ <input type="text" maxlength="60" name="name" id="edit-name" size="15" value="" class="form-text required">
 </div>
 <div class="form-item" id="edit-pass-wrapper">
  <label for="edit-pass">Password: <span class="form-required" title="This field is required.">*</span></label>
- <input type="password" name="pass" id="edit-pass" maxlength="60" size="15" tabindex="2" class="form-text required">
+ <input type="password" name="pass" id="edit-pass" maxlength="60" size="15" class="form-text required">
 </div>
-<input type="submit" name="op" id="edit-submit" value="Login" tabindex="3" class="form-submit">
+<input type="submit" name="op" id="edit-submit" value="Login" class="form-submit">
 <div class="item-list"><ul><li class="first"><a href="/user/register" title="Create a new user account.">Create new account</a></li>
 <li class="last"><a href="/user/password" title="Request new password via e-mail.">Request new password</a></li>
-</ul></div><input type="hidden" name="form_build_id" id="form-ed65ea443361a6ce3a003c938ad4bcc4" value="form-ed65ea443361a6ce3a003c938ad4bcc4">
+</ul></div><input type="hidden" name="form_build_id" id="form-fb7f2050fd56181aa4aa2b6fed5e9bf5" value="form-fb7f2050fd56181aa4aa2b6fed5e9bf5">
 <input type="hidden" name="form_id" id="edit-user-login-block" value="user_login_block">
 
 </div></form>
