--- a/p/pa/pad/pad2pad.com.html
+++ b/p/pa/pad/pad2pad.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pad2pad.com privacy policy that was archived on 2010-05-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100527090004id_/http%3A//www.pad2pad.com/company/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pad2pad.com privacy policy that was archived on 2010-09-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100920053301id_/http%3A//www.pad2pad.com/company/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb"><head>
    
@@ -262,8 +262,8 @@ window.onload = init88();
 
 <table class="contentpaneopen">
 	<tbody><tr>
-		<td valign="top"><p class="quote_Text">"Dear Pad2Pad Team, I just got my order. I have to say WOW! The boards look great.                Don't know about the function yet but they look awesome! I would like to that the whole team for all their               efforts and support. I greatly appreciate the expidited over-night shipment as well."</p>
-<p class="quote_Author"><em>Pad2Pad user</em></p></td>
+		<td valign="top"><p class="quote_Text">"Simple to use and very intuitive."</p>
+<p class="quote_Author"><em>Pad2Pad User</em></p></td>
 	</tr>
 	<tr>
         <td valign="top">
@@ -295,7 +295,7 @@ window.onload = init88();
 				<input type="text" name="email" size="13" value="">
 <input type="hidden" name="list[4]" value="signup">
 <input type="submit" name="go" value="Go">
-				<input type="hidden" name="e355d097f11a788049f4d8ba77fca409" value="1"></form>
+				<input type="hidden" name="90f8ca6fb9bd03ba31c535a5224c7d0a" value="1"></form>
 		<!-- You are not allowed to remove or edit the following 3 lines anyway if you didnt buy a license --> 
 
 <!-- You are not allowed to remove or edit the above 3 lines anyway if you didnt buy a license -->
