--- a/f/fo/for/forcedfuckers.com.html
+++ b/f/fo/for/forcedfuckers.com.html
@@ -1,38 +1,34 @@
-<!--The following is the downloaded HTML source of the forcedfuckers.com privacy policy that was archived on 2010-05-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100526231519id_/http%3A//newconceptbusiness.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the forcedfuckers.com privacy policy that was archived on 2010-09-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100920142252id_/http%3A//newconceptbusiness.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link rel="stylesheet" type="text/css" href="style.css">
-<title>NEW CONCEPT BUSINESS SL Official Website.</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="stylesheet" type="text/css" href="/css/style.css">
+<title>New Concept Business SL | Privacy Policy</title>
 </head>
-
 <body>
-
 	<div align="center">
-	
 		<div id="all">
-		
 			<div id="menu">
-				<a class="home" href="./"></a>
-				<img alt="" src="images/menu/img01.gif" class="menu_border">
-				<a class="about" href="about.htm"></a>
-				<img alt="" src="images/menu/img01.gif" class="menu_border">
-				<a class="customer_service" href="cs/"></a>
-				<img alt="" src="images/menu/img01.gif" class="menu_border">
-				<a class="our_sites" href="sites.htm"></a>
-				<img alt="" src="images/menu/img01.gif" class="menu_border">
-				<a class="compliant_service" href="complaint.htm"></a>
-				<img alt="" src="images/menu/img01.gif" class="menu_border">
-				<a class="affiliate_resources" href="affiliate.htm"></a>
-				<img alt="" src="images/menu/img01.gif" class="menu_border">
-				<a class="contacts" href="contact.htm"></a>
+								<a class="home" href="http://newconceptbusiness.com/"></a>
+				<img alt="" src="/images/menu/img01.gif" class="menu_border">
+				<a class="about" href="http://newconceptbusiness.com/about.php"></a>
+				<img alt="" src="/images/menu/img01.gif" class="menu_border">
+				<a class="customer_service" href="https://secure2.newconceptbusiness.com/cs/"></a>
+				<img alt="" src="/images/menu/img01.gif" class="menu_border">
+				<a class="our_sites" href="http://newconceptbusiness.com/sites.php"></a>
+				<img alt="" src="/images/menu/img01.gif" class="menu_border">
+				<a class="complaint_service" href="http://newconceptbusiness.com/complaint.php"></a>
+				<img alt="" src="/images/menu/img01.gif" class="menu_border">
+				<a class="affiliate_resources" href="http://newconceptbusiness.com/affiliate.php"></a>
+				<img alt="" src="/images/menu/img01.gif" class="menu_border">
+				<a class="contacts" href="http://newconceptbusiness.com/contacts.php"></a>
+
 			</div>
-			
+
 			<img alt="" src="images/img05.jpg" width="720" height="97">
-			
 			<div id="content">
-			
+
 				<img alt="" src="images/headers/privacy.jpg" width="92" height="19">
 				<br><br>
                   <b>New Concept Business SL</b> and associated companies and affiliated 
@@ -51,7 +47,7 @@
                   you to provide your contact information (such as your name and 
                   email address). Your contact information may be used to communicate 
                   with you when necessary with respect to transactions conducted 
-                  through the Site and material changes in the Site’s policies. 
+                  through the Site and material changes in the Site's policies. 
                   We may also send you information about 
 				  <b>New Concept Business SL</b> and/or promotional materials from 
                   the Site and some of our partners. We will not sell, share or 
@@ -81,31 +77,24 @@
 				<br>
 				Third Party Links. The Site contains links to other World Wide Web Internet sites, resources and sponsors of <b>New Concept Business SL</b>. Selection of an ad banner or link will redirect you off of the Site to a third party Web site. <b>New Concept Business SL</b> is not responsible for the privacy practices of such sites. You should make sure that you read and understand the privacy policies of these sites and direct any concerns regarding any external link to the site administrator or Webmaster of that third party Web site.<br>
 			</p></div>
-			
 			<div id="footer_border">
-				<img alt="" src="images/img01.gif" width="720" height="16">
+				<img alt="" src="/images/img01.gif" width="720" height="16">
 			</div>
-			
 			<div id="footer">
-				<a href="legal.htm">LEGAL</a> | 
-				<a href="privacy.htm">PRIVACY POLICY</a> | 
-				<a href="terms.htm">TERMS OF SERVICE</a> | 
-				<a href="2257.htm">2257 NOTICE (USA ONLY)</a>
+				<a href="http://newconceptbusiness.com/legal.php">LEGAL</a> | 
+				<a href="http://newconceptbusiness.com/privacy.php">PRIVACY POLICY</a> | 
+				<a href="http://newconceptbusiness.com/terms.php">TERMS OF SERVICE</a> | 
+				<a href="http://newconceptbusiness.com/2257.php">2257 NOTICE (USA ONLY)</a>
 				<br>
 				Copyright notice: © New Concept Business S.L., Barcelona, Spain, 2006.
 			</div>
-			
 		</div>
-		
 	</div>
-	
-<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-630887-8";
-urchinTracker();
-</script>
-
-
+	<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
+	</script>
+	<script type="text/javascript">
+	_uacct = "UA-630887-8";
+	//urchinTracker();
+	</script>
 
 </body></html>
