--- a/i/im/img/img999.com.html
+++ b/i/im/img/img999.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the img999.com privacy policy that was archived on 2009-09-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090924214053id_/http%3A//www.img999.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the img999.com privacy policy that was archived on 2010-09-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100921111956id_/http%3A//www.img999.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -31,19 +31,16 @@
 </div>
 <!-- navigation bar end-->
 <br>
-<!-- Begin: AdBrite, Generated: 2009-07-17 5:14:30  -->
-<script type="text/javascript">
-var AdBrite_Title_Color = '0000FF';
-var AdBrite_Text_Color = '000000';
-var AdBrite_Background_Color = 'FFFFFF';
-var AdBrite_Border_Color = 'CCCCCC';
-var AdBrite_URL_Color = '008000';
-try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
+<script type="text/javascript"><!--
+google_ad_client = "pub-9127725268457940";
+/* 728x90, created 5/14/10 */
+google_ad_slot = "1845761785";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
 </script>
-<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=1046754&zs=3732385f3930&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=1046754&amp;zs=3732385f3930&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20090924214053id_%2Fhttp%253A%2F%2Fwww.img999.com%2Fprivacy-policy.php" type="text/javascript"></script>
-<a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=1046754&amp;afsid=1"><img src="http://files.adbrite.com/mb/images/adbrite-your-ad-here-leaderboard.gif" style="background-color:#CCCCCC;border:none;padding:0;margin:0;" alt="Your Ad Here" width="14" height="90" border="0"></a></span>
-<!-- End: AdBrite -->
-<!-- open div to contain content for each page -->
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 <div id="content">
 <h3>IMG999 - Free Image Hosting and Sharing Privacy Policy</h3>
 <p>
@@ -95,7 +92,16 @@ Consumers can access this information by contacting us through our <a href="cont
 If you feel that this site is not following its stated information policy, or have any other questions
  regarding the operation of this site, please contact or us via the form on our
  <a href="contact.php">contact page</a>.
-</p><a href="http://click.linksynergy.com/fs-bin/click?id=vLwc4/BTdu4&amp;offerid=102327.10000201&amp;type=4&amp;subid=0"><img alt="TigerDirect" border="0" src="http://images.tigerdirect.com/email/affiliate_new/Generic_Affiliate_052109_tigerdirect_468x60.gif"></a><img border="0" width="1" height="1" src="http://ad.linksynergy.com/fs-bin/show?id=vLwc4/BTdu4&amp;bids=102327.10000201&amp;type=4&amp;subid=0">
+</p><script type="text/javascript"><!--
+google_ad_client = "pub-9127725268457940";
+/* 468x60, created 5/14/10 */
+google_ad_slot = "9767875127";
+google_ad_width = 468;
+google_ad_height = 60;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 
 <!-- site footer, copyright, etc -->
 <div id="footer">
